// All models must implement this proto definiton
// MAL generates clients with this proto to call models
syntax = "proto3";

package container_models;
option go_package = "models/container_models";

service Service {
	rpc Predict (PredictRequest) returns (PredictReply) {}
}

message PredictRequest {
	repeated ImageVector images = 1;
}

message ImageVector {
	repeated int32 pixels = 1;
}

message PredictReply {
	repeated string labels = 1;
}